<resources>
    <string name="app_name">OneTwoTrip</string>
    <string name="price_economy">Эконом класс: %d %s</string>
    <string name="price_business">Бизнес класс: %d %s</string>
    <string name="prices">Цены: %d %s, %d %s</string>
    <string name="price">Цена: %d %s</string>
    <string name="transfers_count">Количество пересадок: %d</string>
    <string name="departure_airport"><![CDATA[<font color="#008000">Аэропорт вылета</font>]]> %s</string>
    <string name="landing_airport"><![CDATA[<font color="#008000">Аэропорт приземления</font>]]> %s</string>
    <string name="price_selection_error">Выберите класс перелёта</string>
    <string name="apply">Применить</string>
    <string name="cancel">Отмена</string>
    <string name="navigate_to_list">Перейти к списку</string>
    <string name="route">Маршрут: %s</string>
</resources>