<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="@dimen/margin_16"
    android:layout_marginVertical="10dp"
    app:cardBackgroundColor="#fff"
    app:cardCornerRadius="5dp"
    app:cardElevation="2dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="@dimen/margin_16"
        android:paddingHorizontal="@dimen/margin_16"
        android:background="?attr/selectableItemBackground"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvPrices"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            tools:text="@string/prices"/>

        <TextView
            android:id="@+id/tvTransfers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            tools:text="@string/transfers_count"/>
        <TextView
            android:id="@+id/tvDepartureAirport"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            tools:text="@string/departure_airport"/>
        <TextView
            android:id="@+id/tvLandingAirport"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            tools:text="@string/landing_airport"/>
    </LinearLayout>
</androidx.cardview.widget.CardView>